@@ -181,6 +181,38 @@ hr {
   border: 0;
 }
 
+.copy > *:first-child {
+  margin-top: 0;
+}
+
+.copy > *:last-child {
+  margin-bottom: 0;
+}
+
+.copy > *:not(h1):not(h2):not(h3):not(h4):not(h5):not(h6):not(p) {
+  margin-top: 1.5em;
+  margin-top: var(--copy-space-primary);
+  margin-bottom: 1.5em;
+  margin-bottom: var(--copy-space-primary);
+}
+
+.copy > h1, .copy > h2, .copy > h3, .copy > h4, .copy > h5, .copy > h6 {
+  margin-top: 1.5em;
+  margin-top: var(--copy-space-primary);
+}
+
+.copy > p {
+  margin-top: .5em;
+  margin-top: var(--copy-space-secondary);
+  margin-bottom: 1.5em;
+  margin-bottom: var(--copy-space-primary);
+}
+
+:root {
+  --copy-space-primary: 1.5em;
+  --copy-space-secondary: .5em;
+}
+
 .al {
   text-align: left;
 }
