@@ -6,6 +6,7 @@
   * (background) add: .bg-transparent
   * (reset) drop -reset.css in favor of reset-css package
   * split into base, utils, modules, debug
+  * (copy) first alpha of copy module
 
 * 0.10.0 (2020-04-15)
 
